--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <option value="NZD">New Zealand Dollar</option>
       <option value="EUR">Euro</option>
       <option value="AUD">Australian Dollar</option>
+      <option value="JPY">Japanese Yen</option>
     </select>
     <button class="btn-dark" id="submitExchange">Show Exchange Rate</button>
     <div class="showRates"></div>
