--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Exchange your currency for US Dollars</h1>
-    <label for="amount">Enter the amount of dollors to exchange:</label>  
-    <input id="amount" type="text">
-    <label for="currency">Choose the currency you wish to exchange to:</label>
-    <select id="currency">
+    <h1>Get exchange rates for different currencies.</h1>
+    <label for="currencyFrom">Choose the currency you wish to exchange from:</label>
+    <select id="currencyFrom">
+      <option value="USD">United States Dollar</option>
       <option value="BBD">Barbados Dollar</option>
       <option value="CAD">Canadian Dollar</option>
       <option value="MXN">Mexican Peso</option>
@@ -17,6 +16,19 @@
       <option value="EUR">Euro</option>
       <option value="AUD">Australian Dollar</option>
       <option value="JPY">Japanese Yen</option>
+    </select>
+    <label for="amount">Enter the amount of dollors to exchange:</label>  
+    <input id="amount" type="text">
+    <label for="currencyTo">Choose the currency you wish to exchange to:</label>
+    <select id="currencyTo">
+      <option value="BBD">Barbados Dollar</option>
+      <option value="CAD">Canadian Dollar</option>
+      <option value="MXN">Mexican Peso</option>
+      <option value="NZD">New Zealand Dollar</option>
+      <option value="EUR">Euro</option>
+      <option value="AUD">Australian Dollar</option>
+      <option value="JPY">Japanese Yen</option>
+      <option value="USD">United States Dollar</option>
     </select>
     <button class="btn-dark" id="submitExchange">Show Exchange Rate</button>
     <div class="showRates"></div>
